尝试解决 打包问题

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -1,3 +1,6 @@
 -var val = 'a' 
 p 管理员
-input(type='text', name='user[name]', value=val)
+form(method='post', action='/uploadFile', enc)
+  .form-group
+    label.control-label 用户名
+    input.form-control(type='text', name='user[name]', value=val)
