--- a/views/admin/pages/admin.pug
+++ b/views/admin/pages/admin.pug
@@ -2,7 +2,7 @@ extends ../layout
 block content   
   .container
     p  管理员412312
-    form(method='post', action='/uploadFile', enctype='application/x-www-form-urlencoded')
+    form(method='post', action='/admin', enctype='application/x-www-form-urlencoded')
       .form-group
         label.control-label 用户名
         input.form-control(type='text', name='user[name]', value=val)
