图片处理有点问题

--- a/views/index/layout.pug
+++ b/views/index/layout.pug
@@ -1,7 +1,10 @@
 doctype html
 html
   head
-    //- include style.css
+    
     title 前台页面
+    
   body
     block content  
+    footer
+      include ./include/head
